# Blast-radius

./: .gitignore  README.md  opencode.json  test.ipynb
blast_docs/: SUPERSET_DEMO_INPUTS.md  (+4 more)
blast_radius/: .gitignore  README.md  pyproject.toml
blast_radius/blast_radius_mcp/: ids.py  logging_config.py  server.py  settings.py
blast_radius/blast_radius_mcp/cache/: keys.py  sqlite.py
blast_radius/blast_radius_mcp/indices/: semantic_index.py
blast_radius/blast_radius_mcp/repo/: fingerprint.py  io.py
blast_radius/blast_radius_mcp/schemas/: common.py  tool1_ast.py  tool2_lineage.py  tool3_semantic.py  tool4_coupling.py  tool5_tests.py
blast_radius/blast_radius_mcp/tools/: tool1_ast_engine.py  tool2_data_lineage.py  tool3_semantic_neighbors.py  tool4_temporal_coupling.py  tool5_test_impact.py
blast_radius/blast_radius_mcp/validation/: validate.py
blast_radius/orchestrator/: __init__.py  diff_parser.py  merge_evidence.py  normalize.py  report_render.py
blast_radius/scripts/: init_tool3_semantic_index.py  run_mcp_server.py
blast_radius/tests/: test_cache.py  test_fingerprint.py  test_ids.py  test_orchestrator_normalize.py  test_orchestrator_pipeline.py  test_orchestrator_report_render.py  test_orchestrator_units.py  test_schemas.py  test_server.py  test_tool1_ast.py  test_tool2.py  test_tool3.py  test_tool4.py  test_tool5.py
blast_radius/tests/fixtures/: tool1_request.json  tool1_response.json  tool2_request.json  tool2_response.json  tool3_request.json  tool3_response.json  tool4_request.json  tool4_response.json  tool5_request.json  tool5_response.json
(+25 files in other folders)
